Update 'jpro-media' documentation